<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2016 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/hint_phonenumber" />

        <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>

        <Button
            android:id="@+id/button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showText"
            android:text="@string/show_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/title_phonelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber_label"/>

        <TextView
            android:id="@+id/text_phonelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing_entered"/>
    </LinearLayout>
</RelativeLayout>
